[tool.poetry]
name = "vsec"
version = "0.1.0"
description = "Data structure when some edges in a graph are planar points in essence"
authors = ["edxu96 <edxu96@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.7.1"
networkx = "^2.5"
pandas = "^1.2.0"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
