[tool.poetry]
name = "vsec"
version = "0.1.3"
description = "Data structure when some edges in a graph are planar points in essence"
authors = ["edxu96 <edxu96@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.7.1"
networkx = "^2.5"
pandas = "^1.2.0"
loguru = "^0.5.3"
darglint = "^1.5.8"
black = "^20.8b1"
flake8 = "^3.8.4"
pre-commit = "^2.9.3"
numpy = "1.18.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
pytest = "^6.2.1"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.darglint]
docstring_style = "google"

[tool.flake8]
docstring_style = "google"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
