[tool.poetry]
name = "mgrid"
version = "0.2.4"
description = "multilayer network for power grid with multiple voltage levels."
authors = ["Edward Xu <edxu96@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.7.1"
networkx = "^2.5"
pandas = "^1.2.0"
loguru = "^0.5.3"
darglint = "^1.5.8"
black = "^20.8b1"
flake8 = "^3.8.4"
pre-commit = "^2.9.3"
numpy = "1.18.0"
Sphinx = "^3.4.3"
pandapower = "^2.5.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
pytest = "^6.2.1"
Sphinx = "^3.4.3"
sphinx-autodoc-typehints = "^1.11.1"
sphinx-rtd-theme = "^0.5.1"
tabulate = "^0.8.7"
docutils = "^0.16"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.darglint]
docstring_style = "google"

[tool.flake8]
docstring_style = "google"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
